<resources>
    <string name="app_name">Tertulias</string>
    <string name="app_mobile_service_creation_error">There was an error creating the Mobile Service. Please contact support.</string>
    <string name="title_activity_main_activity">Tertulias</string>
    <string name="main_activity_create_tertulia_button_text">New</string>
    <string name="main_activity_search_tertulias_button_text">Subscribe</string>
    <string name="main_activity_authorized_checkbox_text">Authorized</string>
    <string name="main_activity_login_button_text">Login</string>
    <string name="main_activity_logout_button_text">Logout</string>
    <string name="main_activity_refresh_button_text">Refresh</string>
    <string name="main_activity_edit_user_button_text">Edit User</string>
    <string name="main_activity_fetch_tertulias_button_text">Fetch</string>
    <string name="main_activity_fetch_members_button_text">Fetch Members</string>
    <string name="main_activity_menu_login_text">Login</string>
    <string name="main_activity_menu_logout_text">Logout</string>
    <string name="main_activity_menu_reload_text">Reload</string>
    <string name="main_activity_user_unauthenticated_message">Authentication required.</string>
    <string name="main_activity_user_authenticated_message">User Authenticated.</string>
    <string name="main_activity_login_failed_message">User signin failed.</string>
    <string name="main_activity_login_succeed_message">User authenticated.</string>
    <string name="main_activity_logout_failed_message">User signout failed.</string>
    <string name="main_activity_logout_succeed_message">User signout succeeded.</string>
    <string name="main_activity_status_code_401">Access not allowed. Please login.</string>
    <string name="main_activity_status_access_error">Please logout and login again</string>
    <string name="main_activity_server_error_exiting">Server error. Shame on us. Application Exiting.</string>
    <string name="main_activity_root_path_not_found">Root path unreachable. Shame on us.</string>
    <string name="main_activity_routes_defined">Main routes defined.</string>
    <string name="main_activity_routes_undefined">No routes defined yet. Still working&#8230;</string>
    <string name="main_activity_token_expired">Refreshing access token&#8230;</string>
    <string name="main_activity_server_timeout">Server timeout, retrying&#8230;</string>
    <string name="main_activity_user_registration">User registration completed&#8230;</string>
    <string name="main_activity_user_reading">User registration reading completed&#8230;</string>
    <string name="main_activity_no_network_title">Connection to the network unavailable.</string>
    <string name="main_activity_no_network">Network connection not found. Please connect to a network and try again.</string>
    <string name="main_activity_no_tertulias">You are not subscribed to any tertulia. Use the buttons bellow to either create one or to search for a public tertulia to subscribe.</string>
    <string-array name="main_activity_drawer_list_items">
        <item>Login</item>
        <item>Logout</item>
        <item>Refresh List</item>
    </string-array>
    <string name="main_activity_error_remote_dialog">Error talking to the server</string>
    <string name="title_activity_tertulia_details">Tertulia Details</string>
    <string name="tertulia_details_label">Tertulia Details</string>
    <string name="tertulia_details_title">Title</string>
    <string name="tertulia_details_undefined_coordinates">Can not display map, coordinates not defined.</string>
    <string name="tertulia_details_undefined_links">Sorry, cannot edit right now. Please try again later.</string>
    <string name="tertulia_details_not_updated">Tertulia not updated.</string>
    <string name="tertulia_details_subject">Subject</string>
    <string name="tertulia_details_location">Default Location</string>
    <string name="tertulia_details_schedule">Schedule</string>
    <string name="tertulia_details_role">My Role</string>
    <string name="tertulia_details_map_button_label">Map View</string>
    <string name="tertulia_details_private">Type</string>
    <string name="tertulia_details_private_hint">Private Tertulia</string>
    <string name="tertulia_details_event_button">Event</string>
    <string name="tertulia_details_messages_button">Messages</string>
    <string name="tertulia_details_edit_button">Edit</string>
    <string name="tertulia_details_members_button">Members</string>
    <string name="tertulia_details_unsubscribe_button">Unsubscribe</string>
    <string name="title_activity_new_tertulia">New Tertulia</string>
    <string name="new_tertulia_label">New Tertulia</string>
    <string name="new_tertulia_name_label">Title</string>
    <string name="new_tertulia_title_hint">Enter the Tertulia title</string>
    <string name="new_tertulia_subject_label">Subject</string>
    <string name="new_tertulia_subject_hint">Describe the Tertulia in one sentence</string>
    <string name="new_tertulia_map_button_label">Map Lookup</string>
    <string name="new_tertulia_location_name_label">"Location"</string>
    <string name="new_tertulia_location_name_hint">"Name of the place"</string>
    <string name="new_tertulia_location_address_label">"Address"</string>
    <string name="new_tertulia_location_address_hint">"Street, number"</string>
    <string name="new_tertulia_location_zipcountry_label">"Zip + Country"</string>
    <string name="new_tertulia_location_zip_hint">0000&#8211;000"</string>
    <string name="new_tertulia_location_city_hint">City name"</string>
    <string name="new_tertulia_location_country_hint">"Country"</string>
    <string name="new_tertulia_location_coordinates_label">"Map coordinates"</string>
    <string name="new_tertulia_location_coordinates_hint">"00,000000"</string>
    <string name="new_tertulia_location_range_hint">"range"</string>
    <string name="new_tertulia_location_range_units_hint">"Km"</string>
    <string name="new_tertulia_schedule_label">Schedule</string>
    <string name="new_tertulia_schedule_button_label">Select Schedule</string>
    <string name="new_tertulia_schedule_hint">No schedule selected</string>
    <string name="new_tertulia_privacy_label">Type</string>
    <string name="new_tertulia_privacy_hint">Private Tertulia</string>
    <string name="new_tertulia_submit_button">Create</string>
    <string name="new_tertulia_cancel_button">Cancel</string>
    <string name="new_tertulia_dialog_cancel_button">Cancel</string>
    <string name="new_tertulia_dialog_next_button">Next</string>
    <string-array name="new_tertulia_dialog_weekly_tostring" formatted="false">
        <item>"The Tertulia events shall occur "</item>
        <item>weekly</item>
        <item>"every %d weeks"</item>
        <item>", on %s"</item>
    </string-array>
    <string-array name="new_tertulia_dialog_monthly_tostring" formatted="false">
        <item>"The Tertulia events shall occur "</item>
        <item>monthly</item>
        <item>"every %d months"</item>
        <item>", on the %d%s day"</item>
        <item>" counting from the end of the month"</item>
    </string-array>
    <string-array name="new_tertulia_dialog_monthlyw_tostring" formatted="false">
        <item>"The Tertulia events shall occur "</item>
        <item>monthly</item>
        <item>"every %d months"</item>
        <item>", on %s of the %d%s week"</item>
        <item>" counting from the end of the month"</item>
    </string-array>
    <string-array name="new_tertulia_dialog_schedules">
        <item>Weekly</item>
        <item>Monthly/Day</item>
        <item>Monthly/Week/Week day</item>
        
        
    </string-array>
    <string name="new_tertulia_toast_success">Tertulia created</string>
    <string name="new_tertulia_toast_cancel">Tertulia creation cancelled</string>
    <string name="new_tertulia_toast_invalid_name">Tertulia name must be defined and unique.</string>
    <string name="new_tertulia_toast_no_schedule_selected">No schedule selected.</string>
    <string name="new_tertulia_toast_schedule_creation_cancelled">Schedule creation cancelled.</string>
    <string name="title_activity_place_presentation">Place Location</string>
    <string name="title_activity_edit_tertulia">Edit Tertulia</string>
    <string name="edit_tertulia_update_button">Update</string>
    <string name="edit_tertulia_toast_cancel">Tertulia edition cancelled</string>
    <string name="edit_tertulia_toast_updated">Tertulia updated</string>
    <string name="message_dialog_edit_tertulia_owner_warning">"You can only edit tertulias that you own. Please get ownership from the current owner and try again."</string>
    <string name="message_dialog_edit_tertulia">"Do you really want to update this tertulia?"</string>
    <string name="title_activity_search_public_tertulia">"Search Public Tertulia"</string>
    <string name="search_public_tertulia_name_label">By Title</string>
    <string name="search_public_tertulia_location_label">By Location</string>
    <string name="search_public_tertulia_location_zipcountry_label">By Area</string>
    <string name="search_public_tertulia_location_coordinates_label">By GeoCoordinates</string>
    <string name="search_public_tertulia_read_coordinates_button">Current Location</string>
    <string name="search_public_tertulia_search_button">Search</string>
    <string name="search_public_tertulia_cancel_button">Cancel</string>
    <string name="search_public_tertulia_search_hint">Search</string>
    <string name="search_public_tertulia_empty_list">No matches found</string>
    <string name="title_dialog_subscribe_public_tertulia">"Subscribe Public Tertulia"</string>
    <string name="message_dialog_subscribe_public_tertulia">"Do you really want to subscribe to this tertulia?"</string>
    <string name="title_dialog_unsubscribe_public_tertulia">"Unsubscribe From Tertulia"</string>
    <string name="message_dialog_unsubscribe_public_tertulia">"Do you really want to unsubscribe from this tertulia?"</string>
    <string name="message_dialog_unsubscribe_public_tertulia_owner_warning">"You cannot unsubscribe from a tertulia that you own. Please transfer the tertulia ownership to another member and try again."</string>
    <string name="message_dialog_unsubscribe_complete">"Unsubscribed from Tertulia"</string>
    <string name="title_activity_public_tertulia_details">Subscribe Public Tertulia</string>
    <string name="public_tertulia_details_label">Tertulia Details</string>
    <string name="public_tertulia_details_title">Title</string>
    <string name="public_tertulia_details_subject">Subject</string>
    <string name="public_tertulia_details_location">Default Location</string>
    <string name="public_tertulia_details_schedule">Schedule</string>
    <string name="public_tertulia_details_subscribe_button">Subscribe</string>
    <string name="public_tertulia_details_subscribe_success">Tertulia subscribed</string>
    <string name="public_tertulia_details_subscribe_fail">Tertulia subscription failed</string>
    <string name="title_activity_new_location">"Default Location"</string>
    <string name="new_location_name_label">"Location"</string>
    <string name="new_location_name_hint">"Location name"</string>
    <string name="new_location_address_label">"Address"</string>
    <string name="new_location_address_hint">"Street, number"</string>
    <string name="new_location_zipcountry_label">"Zip + Country"</string>
    <string name="new_location_zip_hint">"####-###, City Name"</string>
    <string name="new_location_country_hint">"Country"</string>
    <string name="new_location_coordinates_label">"Map coordinates"</string>
    <string name="new_location_latitude_hint">"##,######"</string>
    <string name="new_location_longitude_hint">"##,######"</string>
    <string name="new_location_submit_button">"Create"</string>
    <string name="new_location_cancel_button">"Cancel"</string>
</resources>