<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tertuliaedition.EditTertuliaActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/et_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/et_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <!-- ApiTertulia Title -->

            <TextView
                android:id="@+id/et_titleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90sp"
                android:singleLine="true"
                android:text="@string/new_tertulia_name_label" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_tertulia_title_hint"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:singleLine="true" />


            <!-- ApiTertulia Subject -->

            <TextView
                android:id="@+id/et_subjectLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:singleLine="true"
                android:text="@string/new_tertulia_subject_label" />

            <EditText
                android:id="@+id/et_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_tertulia_subject_hint"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:singleLine="true" />

            <!-- ApiTertulia Privacy -->

            <TextView
                android:id="@+id/et_privacyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:singleLine="true"
                android:text="@string/new_tertulia_privacy_label" />

            <CheckBox
                android:id="@+id/et_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48sp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="6sp"
                android:checked="true"
                android:hint="@string/new_tertulia_privacy_hint"
                android:textSize="18sp" />

            <!-- ApiTertulia Location -->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClickMapLookup"
                android:text="@string/new_tertulia_map_button_label" />

            <!-- ApiTertulia Location Name -->

            <TextView
                android:id="@+id/et_locationNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:singleLine="true"
                android:text="@string/new_tertulia_location_name_label" />

            <EditText
                android:id="@+id/et_locationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_tertulia_location_name_hint"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:singleLine="true" />


            <!-- ApiTertulia Location Address -->

            <TextView
                android:id="@+id/et_addressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:singleLine="true"
                android:text="@string/new_tertulia_location_address_label" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_tertulia_location_address_hint"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:singleLine="true" />


            <!-- ApiTertulia Location Zip & Country -->

            <TextView
                android:id="@+id/et_zipCountryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:singleLine="true"
                android:text="@string/new_tertulia_location_zipcountry_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_zip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20sp"
                    android:layout_weight="1"
                    android:hint="@string/new_tertulia_location_zip_hint"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/et_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/new_tertulia_location_city_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/et_country"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/new_tertulia_location_country_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:singleLine="true" />

            </LinearLayout>


            <!-- ApiTertulia Location Lat & Lon -->

            <TextView
                android:id="@+id/et_latitudeLongitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:singleLine="true"
                android:text="@string/new_tertulia_location_coordinates_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/new_tertulia_location_coordinates_hint"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal|numberSigned"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/et_longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_tertulia_location_coordinates_hint"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal|numberSigned"
                    android:singleLine="true" />

            </LinearLayout>

            <!-- ApiTertulia Schedule -->

            <TextView
                android:id="@+id/et_scheduleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:hint="@string/new_tertulia_schedule_label"
                android:singleLine="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClickSelectSchedule"
                android:text="@string/new_tertulia_schedule_button_label" />

            <TextView
                android:id="@+id/et_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginTop="6sp"
                android:hint="@string/new_tertulia_schedule_hint"
                android:singleLine="true"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/background_light"
        android:orientation="horizontal">

        <Button
            android:id="@+id/et_editButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickUpdateTertulia"
            android:text="@string/edit_tertulia_update_button" />

        <Button
            android:id="@+id/et_cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickCancel"
            android:text="@string/new_tertulia_cancel_button" />

    </LinearLayout>

</FrameLayout>